[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/backgrounds/Menu_Background.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/icons/Return_Arrow_Original.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/Return_Arrow_Pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/Return_Arrow_Hoover.png" type="Texture" id=5]
[ext_resource path="res://menus/main_menus/RegisterMenu.gd" type="Script" id=6]
[ext_resource path="res://loading_screens/LoadingScreen.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.176471, 1, 0, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://assets/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 17
font_data = SubResource( 7 )

[sub_resource type="DynamicFont" id=13]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 2 )

[node name="RegisterMenu" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="MenuTexture" type="TextureRect" parent="BackgroundColor"]
modulate = Color( 1, 1, 1, 0.509804 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="RegisterElementsPanel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -32.0
margin_right = 68.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = SubResource( 1 )

[node name="RegisterElementsContainer" type="VBoxContainer" parent="RegisterElementsPanel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 553.0
margin_bottom = 512.0
custom_constants/separation = 5
alignment = 1

[node name="Separation" type="Control" parent="RegisterElementsPanel/RegisterElementsContainer"]
margin_right = 550.0
margin_bottom = 10.0
rect_min_size = Vector2( 550, 10 )

[node name="UsernameRegisterLabel" type="Label" parent="RegisterElementsPanel/RegisterElementsContainer"]
margin_top = 15.0
margin_right = 550.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "USERNAME"
align = 1

[node name="UsernameRegisterLineEdit" type="LineEdit" parent="RegisterElementsPanel/RegisterElementsContainer"]
margin_top = 45.0
margin_right = 550.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 8 )
max_length = 20
clear_button_enabled = true

[node name="MessageWarningUsername" type="Label" parent="RegisterElementsPanel/RegisterElementsContainer"]
visible = false
margin_top = 90.0
margin_right = 550.0
margin_bottom = 115.0
rect_min_size = Vector2( 0, 25 )
custom_fonts/font = SubResource( 13 )
text = "WARNING_USERNAME"
align = 1

[node name="Separation2" type="Control" parent="RegisterElementsPanel/RegisterElementsContainer"]
margin_top = 90.0
margin_right = 550.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 22 )

[node name="EmailRegisterLabel" type="Label" parent="RegisterElementsPanel/RegisterElementsContainer"]
margin_top = 117.0
margin_right = 550.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 2 )
text = "EMAIL"
align = 1

[node name="EmailRegisterLineEdit" type="LineEdit" parent="RegisterElementsPanel/RegisterElementsContainer"]
margin_top = 147.0
margin_right = 550.0
margin_bottom = 187.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 8 )
max_length = 50
clear_button_enabled = true

[node name="MessageWarningEmail" type="Label" parent="RegisterElementsPanel/RegisterElementsContainer"]
visible = false
margin_top = 222.0
margin_right = 400.0
margin_bottom = 247.0
rect_min_size = Vector2( 0, 25 )
custom_fonts/font = SubResource( 13 )
text = "WARNING_EMAIL"
align = 1

[node name="Separation3" type="Control" parent="RegisterElementsPanel/RegisterElementsContainer"]
margin_top = 192.0
margin_right = 550.0
margin_bottom = 227.0
rect_min_size = Vector2( 0, 35 )

[node name="PasswordRegisterLabel" type="Label" parent="RegisterElementsPanel/RegisterElementsContainer"]
margin_top = 232.0
margin_right = 550.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 2 )
text = "PASSWORD"
align = 1

[node name="PasswordRegisterLineEdit" type="LineEdit" parent="RegisterElementsPanel/RegisterElementsContainer"]
margin_top = 262.0
margin_right = 550.0
margin_bottom = 302.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 8 )
max_length = 25
secret = true
clear_button_enabled = true

[node name="MessageWarningPassword" type="Label" parent="RegisterElementsPanel/RegisterElementsContainer"]
visible = false
margin_top = 367.0
margin_right = 400.0
margin_bottom = 392.0
rect_min_size = Vector2( 0, 25 )
custom_fonts/font = SubResource( 13 )
text = "WARNING_PASSWORD"
align = 1

[node name="Separation4" type="Control" parent="RegisterElementsPanel/RegisterElementsContainer"]
margin_top = 307.0
margin_right = 550.0
margin_bottom = 329.0
rect_min_size = Vector2( 0, 22 )

[node name="RepeatPasswordRegisterLabel" type="Label" parent="RegisterElementsPanel/RegisterElementsContainer"]
margin_top = 334.0
margin_right = 550.0
margin_bottom = 359.0
custom_fonts/font = SubResource( 2 )
text = "REPEAT_PASSWORD"
align = 1

[node name="RepeatPasswordRegisterLineEdit" type="LineEdit" parent="RegisterElementsPanel/RegisterElementsContainer"]
margin_top = 364.0
margin_right = 550.0
margin_bottom = 404.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 8 )
max_length = 25
secret = true
clear_button_enabled = true

[node name="MessageWarningRepeatPassword" type="Label" parent="RegisterElementsPanel/RegisterElementsContainer"]
visible = false
margin_top = 499.0
margin_right = 400.0
margin_bottom = 524.0
rect_min_size = Vector2( 0, 25 )
custom_fonts/font = SubResource( 13 )
text = "WARNING_REPEAT_PASSWORD"
align = 1

[node name="Separation5" type="Control" parent="RegisterElementsPanel/RegisterElementsContainer"]
margin_top = 409.0
margin_right = 550.0
margin_bottom = 454.0
rect_min_size = Vector2( 0, 45 )

[node name="RegisterButton" type="Button" parent="RegisterElementsPanel/RegisterElementsContainer"]
margin_top = 459.0
margin_right = 550.0
margin_bottom = 509.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 10 )
text = "REGISTER"

[node name="ReturnWelcomeMenu" type="TextureButton" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -40.0
margin_right = 150.0
margin_bottom = 40.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true

[node name="LoadScreen" parent="." instance=ExtResource( 7 )]
layer = 2
visible = false

[node name="Register" type="HTTPRequest" parent="."]
timeout = 10.0

[node name="RequestTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="RegisterElementsPanel/RegisterElementsContainer/RegisterButton" to="." method="_on_RegisterButton_pressed"]
[connection signal="pressed" from="ReturnWelcomeMenu" to="." method="_on_ReturnWelcomeMenu_pressed"]
[connection signal="request_completed" from="Register" to="." method="_on_Register_request_completed"]
[connection signal="timeout" from="RequestTimer" to="." method="_on_RequestTimer_timeout"]
